1922 [Update] deprecated update cache files will be deleted 60 days after they have been downloaded
1921 [pre-rendering job] fixed a problem introduced in 1916
1920 [Log] the content of an avs input file will be added to the log
1919 [VideoPlayer] some sizing adjustments
1918 [One-Click] added the FFMSIndexer so that e.g. most AVI and MKV files are now supported.
                 if the FFMSIndexer is used the audio track must be encoded and cannot be muxed only.
1917 [FFMSIndexer] audio avs files will only be created if the indexing was successful
1916 [FileIndexer] added demux option to the audio tracks when using FFMSIndex
                   these audio tracks will be added to the main input tab if "on completion load files" is selected. Feature request #3158957
1915 [VideoPlayer] changed zoom and size behavior
                   fixed starting preview size so that it will always match the screen resolution. Bug #3159086
                   changed seek bar and buttons behavior. Feature request #3003726
                   try to ensure playback speed during playback
1914 [One-Click] fixed handling of video input files with short file names (less than 6 characters including extension). Bug #3160645
1913 [One-Click] chapters will not be added if output container is AVI
1912 [One-Click] fixed handling of video input files without audio track. Bug #3159523


Changelog 0.3.5.0 --> 1911

Main changes:
[Update] enhanced update detection. As a result all downloads need to be reapplied once!
[Update] added a warning about patents and binary files when megui finds updates
[x264] updated settings to reflect the recent x264 build
[DGIndexNV] added support for the recent build and removing therefore the CUVIDServer handling (requires at least DGIndexNV 2021)
[Update] added vobsub.dll and besplit
[One-Click] added support for DGIndexNV and DGAVCIndex
[VideoPlayer] added new control to speed up video navigation. Patch by aKzenT (#1902576)